--- a/Views/Droit/GererDroits.cshtml
+++ b/Views/Droit/GererDroits.cshtml
@@ -41,29 +41,35 @@
                         <div class="card">
                             @using (Html.BeginForm("GrantRights", "Utiliz", FormMethod.Post))
                             {
-                                <div class="card-header align-items-center d-flex row">
+                            <div class="card-header align-items-center d-flex row">
 
-                                    <div class="col-md-6">
-                                        <h4 class="card-title mb-0 flex-grow-1">Droits</h4>
-                                    </div>
-                                    @*<input class="form-check-input" id="checkAll" type="checkbox" value="">*@
-                                    @if (Model.Utiliz != null)
-                                    {
                                 <div class="col-md-6">
-                                    <div class="p-2 border border-dashed rounded badge badge-soft-dark badge-border">
-                                        <div class="d-flex align-items-center">
-                    
-                                            <div class="flex-grow-1">
-                                                <h5 class="mb-0">de @Model.Utiliz.Prenom @Model.Utiliz.Nom</h5>
-                                            </div>
-                                        </div>
-                                    </div>@*<span class="badge badge-soft-dark badge-border badge-lg">@Model.Utiliz.Prenom @Model.Utiliz.Nom</span>*@
-                                    @Html.Hidden("IdUtiliz", Model.Utiliz.IdUtiliz)
-
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="checkAll" value="option">
+                                        <label class="form-check-label" for="checkAll">
+                                            <h4 class="card-title mb-0 flex-grow-1">Droits</h4>
+                                        </label>
+                                    </div>
                                 </div>
+                                
+                                @*<input class="form-check-input" id="checkAll" type="checkbox" value="">*@
+                                @if (Model.Utiliz != null)
+                                {
+                                    <div class="col-md-6">
+                                        <div class="p-2 border border-dashed rounded badge badge-soft-dark badge-border">
+                                            <div class="d-flex align-items-center">
 
-                                    }
-                                </div><!-- end card header -->
+                                                <div class="flex-grow-1">
+                                                    <h5 class="mb-0">de @Model.Utiliz.Prenom @Model.Utiliz.Nom</h5>
+                                                </div>
+                                            </div>
+                                        </div>@*<span class="badge badge-soft-dark badge-border badge-lg">@Model.Utiliz.Prenom @Model.Utiliz.Nom</span>*@
+                                        @Html.Hidden("IdUtiliz", Model.Utiliz.IdUtiliz)
+
+                                    </div>
+
+                                }
+                            </div><!-- end card header -->
 
 
                                 <div class="card-body">
@@ -130,6 +136,31 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
     <script src="~/Content/Layouts/Velzon/js/pages/select2.init.js"></script>
+    <script>
+        $(document).ready(function () {
+            // check/uncheck all checkboxes when the table header checkbox is clicked
+            $("#checkAll").on("click", function () {
+                $(".checkOne").prop("checked", $(this).prop("checked"));
+            });
+
+            // Get the select input element
+            var selectInput = $('#Id');
+
+            // Get all checkboxes
+            var checkboxes = $('input[type="checkbox"]');
+
+            // Disable or enable checkboxes based on select input value
+            selectInput.change(function () {
+                if (selectInput.val() !== 0) {
+                    console.log('différent de 0');
+                    checkboxes.prop('disabled', false);
+                } else {
+                    console.log('égal à 0');
+                    checkboxes.prop('disabled', true);
+                }
+            });
+        });
+    </script>
 }
 
 
