--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -732,7 +732,7 @@
                                     @*<img class="rounded-circle header-profile-user" src="~/Content/Layouts/Velzon/images/users/avatar-1.jpg" alt="Header Avatar">*@
                                     <span class="text-start ms-xl-2">
                                         <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">@CurrentUser.Prenom @CurrentUser.Nom </span>
-                                        <span class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text">@CurrentUser.TypeCompte</span>
+                                        <span class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text">@CurrentUser.Login</span>
                                     </span>
                                 </span>
                             </button>
