--- a/Views/Utiliz/GrantRights.cshtml
+++ b/Views/Utiliz/GrantRights.cshtml
@@ -1,4 +1,4 @@
-﻿@model AEDFirst.Models.UserRightsViewModel
+﻿@model AEDFirst.Models.GrantRightsViewModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
