--- a/Views/Utiliz/AddUser.cshtml
+++ b/Views/Utiliz/AddUser.cshtml
@@ -71,34 +71,21 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Active, new { htmlAttributes = new { @class = "form-control" } })
+                                <select class="form-control" name="Active">
+                                    <option value="True">Actif</option>
+                                    <option value="False">Inactif</option>
+                                </select>
                                 @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Photo, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.TypeCompte, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.TypeCompte, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.TypeCompte, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
+                        @*<div class="form-group">
                             @Html.LabelFor(model => model.IdCreator, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
                                 @Html.EditorFor(model => model.IdCreator, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.IdCreator, "", new { @class = "text-danger" })
                             </div>
-                        </div>
+                        </div>*@
 
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
