--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -295,7 +295,6 @@
                                 <th scope="col">Format</th>
                                 <th scope="col">Taille</th>
                                 <th scope="col">Date d'ajout</th>
-                                @*<th scope="col">Ajouté par</th>*@
                                 <th scope="col" class="text-center">Actions</th>
                             </tr>
                         </thead>
@@ -577,12 +576,13 @@
                     <lord-icon src="https://cdn.lordicon.com/gsqxdxog.json" trigger="loop" colors="primary:#f7b84b,secondary:#f06548" style="width:100px;height:100px"></lord-icon>
                     <div class="mt-4 pt-2 fs-15 mx-4 mx-sm-5">
                         <h4>Are you sure ?</h4>
-                        <p class="text-muted mx-4 mb-0">Are you sure you want to remove this item ?</p>
+                        <p class="text-muted mx-4 mb-0">Êtes-vous sûr de vouloir supprimer cet item ?</p>
                     </div>
                 </div>
                 <div class="d-flex gap-2 justify-content-center mt-4 mb-2">
-                    <button type="button" class="btn w-sm btn-light" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn w-sm btn-danger" id="remove-fileitem">Yes, Delete It!</button>
+                    <button type="button" class="btn w-sm btn-light" data-bs-dismiss="modal">Fermer</button>
+                    <button type="button" class="btn w-sm btn-warning" id="trash-fileitem">Envoyer dans la corbeille</button>
+                    <button type="button" class="btn w-sm btn-danger" id="remove-fileitem">Supprimer définitivement</button>
                 </div>
             </div>
         </div><!-- /.modal-content -->
