--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,17 @@
-﻿@model IEnumerable<AEDFirst.Models.GestionnaireViewModel>
+﻿<style>
+    .list-unstyled.file-manager-menu #arrow .ri-arrow-down-s-line {
+        display: none;
+    }
+
+    .list-unstyled.file-manager-menu #arrow.open .ri-arrow-down-s-line {
+        display: block !important;
+    }
+
+    .list-unstyled.file-manager-menu #arrow.open .ri-arrow-right-s-line {
+        display: none !important;
+    }
+</style>
+@model IEnumerable<AEDFirst.Models.GestionnaireViewModel>
 
 @{
     ViewBag.Title = "Gestionnaire de documents";
@@ -54,13 +67,28 @@
                         </li>*@
                     <!-- lister toutes les catedossiers et leurs dossiers si elles en ont -->
                     @foreach (var item in Model)
+                        
                     {
                         <li>
-                            <a data-bs-toggle="collapse" href="#collapse@item.CategorieDossier.Id" role="button" aria-expanded="false" aria-controls="collapse@item.CategorieDossier.Id">
-                                <i class="ri-folder-2-line align-bottom me-2"></i> <span class="file-list-link">@item.CategorieDossier.NomCatDos</span>
-                            </a>
-                            <div class="collapse" id="collapse@item.CategorieDossier.Id">
+                            <div class="d-flex">
+                                @if(item.Dossiers.Count > 0) {
+                                    <a id="arrow" data-bs-toggle="collapse" href="#collapse-@item.CategorieDossier.NomCatDos" class="me-2 h5" aria-controls="collapse-@item.CategorieDossier.NomCatDos">
+                                        <i class="ri-arrow-right-s-line"></i>
+                                        <i class="ri-arrow-down-s-line"></i>
+                                    </a>
+
+                                }
+                                <a role="button" aria-expanded="true" aria-controls="collapseExample">
+                                    <i class="ri-folder-2-line align-bottom me-2"></i> <span class="file-list-link">@item.CategorieDossier.NomCatDos</span>
+                                </a>
+
+
+                            </div>
+
+
+                            <div class="collapse" id="collapse-@item.CategorieDossier.NomCatDos">
                                 <ul class="sub-menu list-unstyled">
+
                                     @foreach (var dossier in item.Dossiers)
                                     {
                                         <li>
@@ -638,13 +666,27 @@
     @Scripts.Render("~/bundles/jquery")
 
     <script>
-        $(document).ready(function () {
-            // Add click event handler to the category links
-            $('.file-list-link').click(function () {
-                // Toggle the visibility of the associated collapsible section
-                $(this).parent().next('.collapse').collapse('toggle');
-            });
+
+        var buttonState = false;
+
+        var toggleButton = document.getElementById('arrow');
+
+        toggleButton.addEventListener('click', function () {
+            // Inversez l'état du bouton
+            buttonState = !buttonState;
+
+            // Effectuez les actions souhaitées lorsque le bouton est cliqué
+            if (buttonState) {
+                // L'état est actif
+                toggleButton.classList.add('open');
+                // Autres actions à exécuter ici
+            } else {
+                // L'état est inactif
+                toggleButton.classList.remove('open');
+                // Autres actions à exécuter ici
+            }
         });
+
     </script>
 
     <script src="~/Content/Layouts/Velzon/libs/sweetalert2/sweetalert2.min.js"></script>
