--- a/Views/Utiliz/Login.cshtml
+++ b/Views/Utiliz/Login.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = null;
-    ViewBag.Title = "Login | AEDApp";
+    ViewBag.Title = "Login | AEDFirst";
 }
 
 <!doctype html>
@@ -73,7 +73,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center mt-2">
                                     <h5 class="text-primary">Welcome Back !</h5>
-                                    <p class="text-muted">Connexion à AEDApp</p>
+                                    <p class="text-muted">Connexion à AEDFirst</p>
                                 </div>
                                 <div class="p-2 mt-4">
                                     @using (Html.BeginForm())
@@ -129,7 +129,7 @@
                         <div class="text-center">
                             <p class="mb-0 text-muted">
                                 &copy;
-                                <script>document.write(new Date().getFullYear())</script> AEDApp.
+                                <script>document.write(new Date().getFullYear())</script> AEDFirst.
                             </p>
                         </div>
                     </div>
